plus saved stuff

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+    <main>
+        <header>
+            <img src="" alt="">
+            <h1>Rick's Daily Journal</h1>
+        </header>
+    </main>
     
 </body>
 </html>
