initial html frame

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
             <img src="" alt="">
             <h1>Rick's Daily Journal</h1>
         </header>
+        <section>
+            <h2>Current Entries</h2>
+            <ul>
+                <li>Journal Entry</li>
+                <li>Journal Entry</li>
+                <li>Journal Entry</li>
+            </ul>
+            <p>Create Entry</p>
+        </section>
+        <footer>&copy;2020 Rick Blake
+            <a href="GitHub"></a>
+            <a href="LinkedIn"></a>
+        </footer>
     </main>
     
 </body>
