enabled entry filtering

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Rick's Daily Journal</h1>
         </header>
         <section id="journalForm"></section>
-
+        <div class="filters"></div>
         <article id="entryLog">
             
         </article>
